# mini_fiction

./: .flake8  .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.rst  INSTALL.md  MANIFEST.in  Makefile  README.md  README.rst  dev-requirements.txt  dotenv.example.txt  local_settings.example.py  local_sphinx.example.conf  mypy.ini  optional-requirements.txt  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sphinx.conf  sphinxconf.py  sphinxconf.sh  test-requirements.txt  tox.ini
.github/workflows/: backend-lint.yml  frontend-workflow.yml
frontend/: .browserslistrc  .eslintignore  babel.config.json  package.json  webpack.config.babel.js  webpack.config.js
frontend/src/: index.js
frontend/src/css/: icons.css  main.css  markitup.main.css  slides.css
frontend/src/legacy/: bell.js  captcha.js  comments.js  common.js  core.js  editlog.js  markitup-settings.js  story.js
frontend/src/utils/: ajax.js
mini_fiction/: __init__.py  application.py  captcha.py  celery.py  context_processors.py  database.py  dumpload.py  event_bus.py  hashers.py  linters.py  models.py  notifications.py  ponydump.py  ratelimit.py  settings.py  sphinx.conf  tasks.py  widgets.py
mini_fiction/ajax/: utils.py
mini_fiction/ajax/views/: chapter.py  comment.py  story.py
mini_fiction/apis/: amsphinxql.py
mini_fiction/bl/: __init__.py  adminlog.py  authors.py  commentable.py  comments.py  htmlblocks.py  logopics.py  migration.py  news.py  notices.py  registry.py  sorting.py  staticpages.py  stories.py  tag_categories.py  tags.py  utils.py
mini_fiction/downloads/: __init__.py  base.py  fb2.py  html.py  txt.py
mini_fiction/filters/: __init__.py  base.py  typographus.py
mini_fiction/filters/fb2/: __init__.py  fb2-description.xslt  html-to-fb2.xslt  join-fb2-docs.xslt
mini_fiction/filters/html/: __init__.py  footnotes.xslt  post-normalize-html.xslt  pre-normalize-html.xslt
mini_fiction/fixtures/: __init__.py  adminlogtype_dump.jsonl  author_dump.jsonl  categories.json  characters.json  classifiers.json  htmlblock_dump.jsonl  htmlblocks.json  rating_dump.jsonl  ratings.json  staticpage_dump.jsonl  staticpages.json
mini_fiction/forms/: author.py  chapter.py  comment.py  form.py  login.py  register.py  search.py  story.py
mini_fiction/forms/admin/: authors.py  htmlblock.py  logopic.py  newsitem.py  notice.py  sorting.py  staticpage.py  tag.py  tag_categories.py
mini_fiction/forms/fields/: __init__.py
mini_fiction/frontend/: .babelrc  .browserslistrc  .eslintrc  babel.config.json  package.json  webpack.config.babel.js
mini_fiction/frontend/src/: bootstrap.js  chapter_sorting.js  editor.js  experimental_index.css  index.css  index.js  slides.js  story.css  story.js
mini_fiction/logic/: adminlog.py  caching.py  character_groups.py  characters.py  environment.py  frontend.py  htmlblocks.py  image.py  logopics.py  settings.py  staticpages.py  tags.py  tasks.py
mini_fiction/logic/tags/: __init__.py  private.py  public.py
mini_fiction/management/: main.py  manager.py
mini_fiction/management/commands/: checkcomments.py  checkcounters.py  checkstoryvoting.py  checkwordscount.py  collectstatic.py  convertimages.py  createsuperuser.py  deleteauthor.py  deletestory.py  dumpchaptershtml.py  dumpdb.py  dumploaddb.py  dumpstory.py  initsphinx.py  loaddb.py  seed.py  sendtestemail.py  shell.py  sphinxconf.py  status.py  zip_dump.py
mini_fiction/static/css/: bootstrap.css  main.css  markitup.main.css  markitup.set.css
mini_fiction/static/fonts/: PTC75F_license.txt
mini_fiction/static/js/: bell.js  comment.js  comments.js  common.js  core.js  editlog.js  jquery-ui-1.11.4.sortable.min.js  jquery.msCarousel-min.js  main.js  markitup.set.js  story.js
mini_fiction/story_voting/: base.py  star.py
mini_fiction/templatefilters/: registry.py  timesince.py
mini_fiction/templates/: 403.html  403_modal.html  404.html  404_modal.html  500.html  500_modal.html  abuse_report.html  abuse_report_ajax.html  author_dashboard.html  author_overview.html  author_profile_edit.html  base.html  base.json  base_body_scripts.html  base_head.html  bookmarks.html  chapter_confirm_delete.html  chapter_pure_html.html  chapter_pure_text.txt  chapter_view.html  chapter_work.html  comment_confirm_delete.html  comment_work.html  common.html  csrf.html  csrf_modal.html  dump.html  error.html  error_modal.html  favorites.html  index.html  macro.html  notifications.html  notifications_popup.html  profile_edit_base.html  profile_edit_general.html  profile_edit_mail.html  profile_edit_personal.html  profile_edit_security.html  profile_edit_subscriptions.html  (+28 more)
mini_fiction/templates/admin/: index.html
mini_fiction/templates/captcha/: captcha.html  hcaptcha.html  pycaptcha.html  (+1 more)
mini_fiction/templatetags/: caching.py  generate_captcha.py  get_comment_threshold.py  hook.py  html_block.py  i18n.py  logopic.py  misc.py  notifications.py  random_logo.py  random_stories.py  registry.py  shown_newsitem.py  shown_notice.py  story_comments_delta.py  unread_abuse_reports_count.py
mini_fiction/utils/: converter.py  debugtoolbar.py  diff.py  enum.py  frontend.py  image.py  mail.py  misc.py  random.py  status.py  timesince.py  timezone.py  unidecode.py  views.py
mini_fiction/validation/: __init__.py  auth.py  chapters.py  comments.py  common.py  htmlblocks.py  logopics.py  news.py  notices.py  sorting.py  staticpages.py  stories.py  tag_categories.py  tags.py  utils.py
mini_fiction/views/: abuse.py  auth.py  author.py  chapter.py  comment.py  common_comment.py  editlog.py  feeds.py  index.py  localstatic.py  misc.py  news.py  news_comment.py  notice_comment.py  notices.py  notifications.py  object_lists.py  search.py  sidebar.py  sitemap.py  staticpages.py  story.py  story_comment.py  story_local_comment.py  stream.py  tags.py
tests/: conftest.py  factories.py
tests/features/: test_author_session.py  test_features_stub.py
tests/models/: test_story.py  test_tag.py
tests/requests/: test_requests_stub.py
tests/support/: test_dumpload.py  test_ponydump.py
typings/flask_babel/: __init__.pyi
(+338 files in other folders)
